# 42sh

./: README  configure.ac
src/: .gitignore  42sh.c  Makefile.am
src/ast/: Makefile.am  ast.c  ast.h  ast_type.h  free_ast.c  free_ast.h  init_ast.c  init_ast.h  init_ast_2.c  init_ast_2.h  run_ast.c  run_ast.h  run_ast_2.c  run_ast_2.h
src/builtins/: Makefile.am  built_boolean.c  built_echo.c  built_exit.c  built_unset.c  builtins.h  g_exito.c  g_exito.h  g_lasto.c  g_lasto.h
src/expansion/: Makefile.am  expansion.c  expansion.h  init_table.c  init_table.h  variable.c  variable.h
src/io/: io.c  io.h
src/lexer/: Makefile.am  g_begin.c  g_begin.h  lexer.c  lexer.h  lexer_case_1.c  lexer_case_1.h  lexer_case_2.c  lexer_case_2.h  lexer_def.h  lexer_tools.c  lexer_tools.h
src/parser/: Makefile.am  parser.c  parser.h  parser_2.c  parser_2.h
tests/: Makefile.am
tests/functionnal_test/: Makefile.am  testsuite.sh
tests/functionnal_test/bad_syntax/: nimp.test
tests/functionnal_test/bad_syntax/expansion/: double_into_single_quote_1.test  double_into_single_quote_2.test  expansion_var_1.test  expansion_var_2.test  simple_double_quote_1.test  simple_double_quote_2.test  simple_single_quote_1.test  simple_single_quote_2.test  single_into_double_quote_1.test  single_into_double_quote_2.test  testsuite.sh
tests/functionnal_test/bad_syntax/if/: no_body.test  no_condition.test  no_fi.test  no_then.test  testsuite.sh
tests/functionnal_test/bad_syntax/lexer/: all_reserved_words.test  backslash_double_quote.test  backslash_single_quote.test  backslash_then_double_quote_non_valid.test  backslash_then_single_quote_non_valid.test  double_quote_simple_case.test  double_quote_tricky_case.test  getToken3.test  getToken4.test  redirect_tricky_case_1.test  single_quote_after_word.test  single_quote_before_word.test  single_quote_case_2.test  testsuite.sh  true_do_done_echo.test
tests/functionnal_test/bad_syntax/while_until/: no_body_until.test  no_body_while.test  no_condition_until.test  no_condition_while.test  no_do_until.test  no_do_while.test  testsuite.sh
tests/functionnal_test/correct_syntax/command_lists/: many_commands1.test  many_commands2.test  testsuite.sh  two_commands_terminating_with_semicolon.test  two_commands_terminating_witout_semicolon.test  twos_commands_with_space.test
tests/functionnal_test/correct_syntax/comments/: inline_comment.test  not_first.test  testsuite.sh
tests/functionnal_test/correct_syntax/expansion/: expansion4.test  expansion5.test  testsuite.sh
tests/functionnal_test/correct_syntax/for/: for.test  testsuite.sh
tests/functionnal_test/correct_syntax/if_commands/: embedded_ifs1.test  embedded_ifs2.test  if_false.test  if_false_else.test  if_true.test  if_true_else.test  testsuite.sh  twos_ifs.test
tests/functionnal_test/correct_syntax/pipe/: pipe1.test  pipe2.test  pipe3.test  pipe4.test  testsuite.sh
tests/functionnal_test/correct_syntax/redirection/: redirection1.test  redirection2.test  redirection3.test  redirection4.test  (+5 more)
tests/unit_test/: Makefile.am  ast_test  ast_test.c  expansion_test.c  lexer_test.c
(+43 files in other folders)
