lib_LIBRARIES = libast.a

libast_a_SOURCES =  \
  ast.c \
  ast.h \
  free_ast.c \
  free_ast.h \
  init_ast.c \
  init_ast.h \
  init_ast_2.c \
  init_ast_2.h \
  run_ast.c \
  run_ast.h \
  run_ast_2.c \
  run_ast_2.h

libast_a_CPPFLAGS = -I$(top_srcdir)/src

libast_a_CFLAGS = -std=c99 -Werror -Wall -Wextra -Wvla -pedantic

noinst_LIBRARIES = libast.a
