lib_LIBRARIES = liblexer.a

liblexer_a_SOURCES =  \
  lexer.c \
  lexer.h \
  lexer_case_1.c \
  lexer_case_1.h \
  lexer_case_2.c \
  lexer_case_2.h \
  lexer_def.h \
  lexer_tools.c \
  lexer_tools.h \
  g_begin.c \
  g_begin.h

liblexer_a_CPPFLAGS = -I$(top_srcdir)/src

liblexer_a_CFLAGS = -std=c99 -Werror -Wall -Wextra -Wvla -pedantic

noinst_LIBRARIES = liblexer.a
